# rag-agent-kit

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.he.md  README.md  SUPPORTED_DEPLOYMENT.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: AWS_INFRA_ONLY.md  CONFIG.he.md  INSTALL.he.md  SECURITY.he.md  TROUBLESHOOTING.he.md  TROUBLESHOOTING.md  USAGE.he.md  USAGE.md
docs/00_overview/: ARCHITECTURE.md  CONFIG.md
docs/01_installation/: INSTALL.md
docs/03_security/: PRODUCTION_HARDENING.md  SECURITY.md  SECURITY_MODEL.md
docs/04_deployment/: DEPLOYMENT.md
docs/05_validation/: VALIDATION_REPORT.md
docs/07_observability/: OVERVIEW.md
observability/: README.md  docker-compose.phoenix.yml
observability/otel/: config.yaml
reports/: VERIFICATION_SUMMARY.md  cleanup_notes.md  local_smoke_test.md  observability_check.md  test_output.txt
scripts/: audit.ps1  rag_audit.py  run.ps1  smoke_test.ps1  smoke_test.py
src/: cli.py  main.py
src/api/: routes.py
src/connectors/: base.py  rest_connector.py
src/core/: logging.py  settings.py
src/embeddings/: base.py  openai_embeddings.py
src/meta/: build_info.py
src/middleware/: cors.py  rate_limit.py  security_headers.py
src/providers/: anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
src/retrieval/: pipeline.py
src/security/: auth.py
src/vectorstores/: base.py  memory_store.py  pgvector_store.py
src/websearch/: base.py  serper_search.py  tavily_search.py
terraform/: README.md
tests/: smoke_test.py  test_health.py
(+6 files in other folders)
