[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-agent-kit"
version = "0.1.0"
description = "Secure-by-default modular RAG agent kit"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
